--- a/app/api/pyproject.toml
+++ b/app/api/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.11"
 django = "^5.0.7"
 pillow = "^10.4.0"
+djangorestframework = "^3.15.2"
+django-cors-headers = "^4.4.0"
+whitenoise = "^6.7.0"
 
 
 [build-system]
